Upgrade PDFBox API to v2.0.3 (#311)